# game_of_life

./: LICENSE  README.rst  game_of_life.py  pyproject.toml  test_game_of_life.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
