[project]
name = "game-of-life"
version = "0.1.0"
description = "A simple Conway's Game of Life implementation written in Python"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = [
    "--cov=game_of_life",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["game_of_life"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
